update with some of my info

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.17",
     "animejs": "^3.1.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.1",
+    "bootstrap-icons": "^1.8.1",
     "emailjs-com": "^2.6.3",
     "google-maps-react": "^2.0.2",
     "imagesloaded": "^4.1.4",
