--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "jhon-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gouldilocks.github.io/personal_webpage/",
   "dependencies": {
+    "-": "^0.0.1",
     "@fullpage/react-fullpage": "^0.1.17",
     "animejs": "^3.1.0",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.1",
     "emailjs-com": "^2.6.3",
+    "gh-pages": "^3.2.3",
     "google-maps-react": "^2.0.2",
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.6",
@@ -29,13 +32,16 @@
     "react-stickynode": "^2.1.1",
     "react-typewriter-hook": "^1.0.1",
     "react-water-wave": "^1.0.5",
+    "save-dev": "^0.0.1-security",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
