--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jhon-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gouldilocks.github.io",
+  "homepage": "https://gouldilocks.github.io/personal_webpage",
   "dependencies": {
     "-": "^0.0.1",
     "@fullpage/react-fullpage": "^0.1.17",
@@ -10,7 +10,6 @@
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.1",
     "emailjs-com": "^2.6.3",
-    "gh-pages": "^3.2.3",
     "google-maps-react": "^2.0.2",
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.6",
@@ -57,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
