--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@fullpage/react-fullpage": "^0.1.17",
+    "@material-ui/core": "^4.12.4",
     "animejs": "^3.1.0",
     "bootstrap": "^4.6.1",
     "bootstrap-icons": "^1.8.1",
@@ -13,6 +14,7 @@
     "google-maps-react": "^2.0.2",
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.6",
+    "js-file-downloader": "^1.1.24",
     "parallax-js": "^3.1.0",
     "popper.js": "^1.16.0",
     "react": "^16.9.0",
