--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jhon-react",
+  "name": "gould-page",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://gouldilocks.github.io/personal_webpage",
@@ -27,7 +27,7 @@
     "react-pose-text": "^3.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.7.14",
     "react-slick": "^0.25.2",
     "react-stickynode": "^2.1.1",
