--- a/package.json
+++ b/package.json
@@ -5,34 +5,35 @@
   "homepage": "https://gouldilocks.github.io/personal_webpage",
   "dependencies": {
     "-": "^0.0.1",
-    "@fullpage/react-fullpage": "^0.1.17",
+    "@fullpage/react-fullpage": "^0.1.26",
     "@material-ui/core": "^4.12.4",
-    "animejs": "^3.1.0",
-    "bootstrap": "^4.6.1",
-    "bootstrap-icons": "^1.8.1",
+    "@popperjs/core": "^2.11.5",
+    "animejs": "^3.2.1",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "emailjs-com": "^2.6.3",
-    "google-maps-react": "^2.0.2",
-    "imagesloaded": "^4.1.4",
+    "google-maps-react": "^2.0.6",
+    "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "js-file-downloader": "^1.1.24",
     "parallax-js": "^3.1.0",
-    "popper.js": "^1.16.0",
-    "react": "^16.14.0",
-    "react-countup": "^4.2.2",
-    "react-dom": "^16.9.0",
+    "popper.js": "^1.16.1",
+    "react": "^18.1.0",
+    "react-countup": "^6.2.0",
+    "react-dom": "^18.1.0",
     "react-magnific-popup": "^1.0.1",
-    "react-parallax": "^2.2.0",
+    "react-parallax": "^3.5.0",
     "react-particles-js": "^2.7.0",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-scroll": "^1.7.14",
-    "react-slick": "^0.25.2",
-    "react-stickynode": "^2.1.1",
+    "react-scroll": "^1.8.7",
+    "react-slick": "^0.29.0",
+    "react-stickynode": "^4.0.0",
     "react-typewriter-hook": "^1.0.1",
-    "react-water-wave": "^1.0.5",
+    "react-water-wave": "^2.0.1",
     "save-dev": "^0.0.1-security",
     "slick-carousel": "^1.8.1"
   },
@@ -60,6 +61,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^4.0.0"
   }
 }
