--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gould-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cgould.net",
+  "homepage": ".",
   "dependencies": {
     "-": "^0.0.1",
     "@fullpage/react-fullpage": "^0.1.26",
